FrostWire 2.1.6 build 597 - AUG/23/2019
 - Archive.org .torrent download errors fixed
 - TorLock and Torrentz2 search results are magnet based to reduce fetching errors
 - material:1.1.0-alpha09 update
 - play-services-ads:18.1.1 update
 - mopub-sdk:5.8.0 update
 - com.android.tools.build:gradle:3.5.0
 - com.android.support:design:29.0.0
 - com.android.support:animated-vector-drawable:29.0.0
 - com.android.support:customtabs:29.0.0
 - com.android.support:exifinterface:29.0.0
 - com.android.support:preference-v7:29.0.0
 - com.android.support:preference-v14:29.0.0
 - gradle wrapper distributionUrl=https\://services.gradle.org/distributions/gradle-5.6-all.zip
     
FrostWire 2.1.5 build 596 - JUL/13/2019
 - AndroidX API migration update
 - TPB search censorship improvements
 - fixes, cleanups, optimizations
 - applovin 9.7.2, play-services-ads 18.1.0

FrostWire 2.1.4 build 593 - JUN/01/2019
 - Nyaa search fixed
 - New Torrentz2 search
 - Thousands of code cleanups
 - applovin 9.7.0, play-services-ads 17.2.1, mopub-sdk 5.7.0

FrostWire 2.1.3 build 592 - MAY/16/2019
 - New jlibtorrent 1.2.1.0 with latest libtorrent release
 - play-services-ads 17.2.0, applovin 9.6.0, okhttp 3.12.2
 - Plus: Soundcloud search/downloads fixed
 - TorLock search fixes
 - Archive.org search fixes
 - gradle 4.10.1 -> 5.1.1 update (dev)
 - com.android.tools.build:gradle 3.2.1 -> 3.4.0 (dev)
 - More efficient build with D8
 - using android NDK r19c (released January 2019)
 - updated to boost 1.70.0
 - frostwire.com is opened in case apk update can't be launched (Android 9 issue mostly)
 - libtorrent: make sure session cleanup releases all its references to torrents
 - libtorrent: track the mapped port for each NAT mapping transport
 - libtorrent: optimize resolve_duplicate_filenames_slow()
 - libtorrent: use a more restrictive limit on number of pieces allowed in a torrent
 - libtorrent: improve disk I/O logging
 - libtorrent: always flush disk I/O job queue before shutdown