@@ -91,8 +91,7 @@
                 android:id="@+id/fragment_transfer_detail_details_sequential_download_checkBox"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:checked="true"
-                android:enabled="false" />
+                android:checked="true" />
         </LinearLayout>
 
         <ImageView
